# virtual-vet

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  IMPROVEMENTS.md  PROJECT_CONTEXT.md  README.md  _verify_pharma.py  cleanup_orphan_once.py  cli_daemon.py  cli_shim.py  gui_app.py  main.py  pyproject.toml  requirements.txt  sidecar_entry.py  vet_monitor.py  zotero_import.csv  zotero_import.ris  打开 virtual-vet.bat  论文大纲.md
Bioflow_Labs_Platform-main/: .gitignore  README.md  pyproject.toml
Bioflow_Labs_Platform-main/job/: file_stucture.txt  job.txt  jobs_list.txt
Bioflow_Labs_Platform-main/src/bioflow/core/: hashing.py  logging.py  template_schema.py  units.py  validate_template.py  version.py
Bioflow_Labs_Platform-main/src/bioflow/db/: conn.py  runs.py  schema.py  templates.py
Bioflow_Labs_Platform-main/src/bioflow/engine/: runner.py  state.py
Bioflow_Labs_Platform-main/src/bioflow/engine/physiology/: algebraic.py  compliance.py  modifiers.py
Bioflow_Labs_Platform-main/src/bioflow/engine_app/: cli.py
Bioflow_Labs_Platform-main/tests/: test_db_runs.py  test_db_template.py  test_phase41_conservation.py  test_phase5_hypovolemia_effect.py  test_phase5_hypovolemia_load_time.py  test_phase5_no_regression_neutral.py  test_phase5_pooling_bias_gate.py  test_phase5_posture_effect.py  test_phase5_seam.py  test_phase5_tone.py  test_phase5_tone_effect.py  test_phase5_tone_step_effect.py  test_phase5_validation_defaults.py  test_runner_phase3.py  test_template_validation.py
Bioflow_Labs_Platform-main/tests/fixtures/: template_invalid_missing_field.json  template_valid_baseline.json
Bioflow_Labs_Platform-main/tools/: quick_validate.py
Medicina-main/: README.md
data/: breed_standards.json  cases.json  clue_catalog.json  coupling_rules.json  coupling_rules_schema.json  disease_manifestations.json  disease_references.json  diseases.json  exam_templates.json  examinations.json  game_config.json  game_sessions_test.db  gut_ranges.json  lifecycle_profiles.json  lifecycle_references.json  liver_ranges.json  ode_diseases.json  ode_diseases_schema.json  parameter_references.json  symptom_definitions.json  symptom_thresholds.json  treatments.json  virtual_vet_to_vk_symptom_map.json  vitals_ranges.json  vk_to_virtual_vet_disease_map.json
docs/: CODE_WIKI.md  README.md  architecture-improvement-plan.md  architecture.md  bioflow_reference_report.md  clinical-interpretation-layer.md  clinical-translation-convergence-plan.md  clinical-translation-implementation-audit.md  clue-trigger-plan.md  coupling_inventory.md  disease-symptom-timelines.md  disease_references.md  disease_references_plan.md  dka_dehydration_fix.md  gate_check_proposal.md  harness-engineering.md  heavy-test-triage.md  interpretation-lifecycle-sketch.md  interpretation-migration-sequence.md  interpretation-refresh-contract.md  kernel-first-design.md  kernel-time-architecture-sketch.md  literature-backed-testing-plan.md  literature-hierarchy.md  parallel_exam_plan.md  physiology_audit.md  presentation-state-builder-sketch.md  refactor_game_layer.md  repair_plan_2026-06-04.md  root_cause_analysis_2026-06-04.md  runtime-composition-sketch.md  severity_design_proposal.md  solver-refactor-roadmap-v3.md  test-command-guide.md  test-constraint-audit.md  test-coverage-effectiveness-report.md  test-evidence-registry.md  test-manifest-summary.md  test-runbook.md  testing.md  (+1 more)
experiments/: B_group_questions.md  EXPERIMENTS_ROADMAP.md  analyze_map_clamp_effect.py  arm_b_reverse_order_test.py  arm_b_reverse_order_v2.py  baseline_control.json  check123.py  check_hemorrhage_order.py  check_order_swap.py  check_radau_reference.py  check_radau_reference_v2.py  convergence_study.py  convergence_study_60s.json  convergence_study_data.json  convergence_study_report.md  convergence_study_v2.json  convergence_study_v2.py  convergence_study_v3.json  convergence_study_v4.json  convergence_study_v4.py  coupling_comparison.py  coupling_comparison_data.json  coupling_comparison_report.md  debug_discrepancy.py  debug_hr_stabilization.py  debug_pure_euler.py  debug_pure_euler2.py  debug_swap.py  debug_swap2.py  diag_aa_grad.py  diag_baroreflex.py  diag_vdp_po2_trace.py  diagnose_dsv_overflow.py  diagnostic_dt001.py  diagnostic_minimal.py  diagnostic_rk45.py  diagnostic_solve_ivp.py  diagnostic_step_dt.py  diagnostic_unified_rhs.py  dt_sweep_test.py  (+112 more)
game/: __init__.py  action_system.py  case_generator.py  diagnosis_engine.py  gameplay_modifier.py  persistence_adapter.py  runtime.py  runtime_composition.py  test_translator.py  time_manager.py  treatment.py  treatment_protocol.py
sidecar/: case_loader.py  protocol.py  session_pool.py  snapshot_serializer.py
src/: __init__.py  ascii_dashboard.py  ascii_heart.py  blood.py  cardiac_electrophysiology.py  cli.py  cli_common.py  clinical_interpreter.py  clinical_signs_engine.py  clinical_snapshot.py  clinical_stage.py  clinical_state.py  clue_catalog_validation.py  coagulation.py  common_types.py  config_validation.py  debug_params.py  endocrine.py  engine_advancer.py  exam_registry.py  fluid.py  gut.py  heart.py  heart_art.py  heart_realistic.py  heart_v2.py  immune.py  interpretation_refresher.py  kidney.py  lifecycle.py  lifecycle_curves.py  lifecycle_profiles.py  liver.py  logger_config.py  lung.py  lymphatic.py  neuro.py  noble_purkinje.py  organ_guard.py  organ_health.py  (+11 more)
static/: index.html
tests/: _solver_assertions.py  collect_disease_progression.py  conftest.py  kernel_harness.py  suite_acid_base.py  suite_architecture_gates.py  suite_cardioreal.py  suite_cardiovascular.py  suite_disease_blackbox.py  suite_renal.py  test_action_runtime_seam.py  test_blood.py  test_blood_volume_conservation.py  test_boundary.py  test_clinical_stage.py  test_closed_loop_stability.py  test_coagulation.py  test_comorbidity_cases.py  test_config_validation.py  test_coupling.py  test_coupling_lag_state.py  test_cross_module_coupling.py  test_debug_params.py  test_disease_endurance.py  test_diseases.py  test_endocrine.py  test_engine_stability.py  test_factor_command.py  test_fluid.py  test_game.py  test_gut.py  (+49 more)
(+128 files in other folders)
