[project]
name = "virtual-vet"
version = "0.1.0"
description = "Veterinary clinical diagnosis education game"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "flask>=2.3.0",
    "matplotlib>=3.5.0",
    "jsonschema>=4.26.0",
    "scipy>=1.15.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: fast daily development lane (formulae, invariants, lightweight contracts)",
    "core: core regression lane layered on top of fast",
    "heavy: heavier integration/validation lane layered on top of core",
    "benchmark: long-running endurance/benchmark lane kept out of normal loops",
    "slow: long-running tests excluded from quick development runs",
    "slower: heavier endurance or validation-style tests",
    "architecture: architectural constraint checks (AST-based rule enforcement)",
    "suite_disease_blackbox: disease black-box stability test suite",
    "stability: stability tests (cardiovascular, disease, convergence)",
    "tier0: pure metadata / unit tests (no engine setup, <1s)",
    "tier1: engine contract tests (one VirtualCreature, <5s)",
    "tier2: scenario integration tests (multi-organ coupling, <30s)",
    "tier3: solver parity / validation / endurance (>30s)",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
