[project]
name = "virtual-vet"
version = "0.1.0"
description = "Veterinary clinical diagnosis education game"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "flask>=2.3.0",
    "matplotlib>=3.5.0",
    "jsonschema>=4.26.0",
    "scipy>=1.15.3",
    "textual>=8.2.7",
    "windows-curses>=2.4.2",
]

[project.scripts]
vet-monitor = "cli_shim:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Global per-test timeout (pytest-timeout). 60s is well above the core/fast
# lane per-test budget (see docs/test-runbook.md) but well below infinity,
# so a single hung test no longer blocks the whole `core` channel. Heavy
# tests that legitimately need >60s should pass --timeout=N explicitly.
# Motivation: 2026-06-27 — scipy solve_ivp(method="Radau") hangs on the
# full ~50-ODE system (LU decomposition of the Jacobian, scipy >= 1.15).
# Replaced with LSODA in radau.py. See radau.py:1-21.
timeout = 60
markers = [
    "fast: fast daily development lane (formulae, invariants, lightweight contracts)",
    "core: core regression lane layered on top of fast",
    "heavy: heavier integration/validation lane layered on top of core",
    "benchmark: long-running endurance/benchmark lane kept out of normal loops",
    "slow: long-running tests excluded from quick development runs",
    "slower: heavier endurance or validation-style tests",
    "architecture: architectural constraint checks (AST-based rule enforcement)",
    "suite_disease_blackbox: disease black-box stability test suite",
    "stability: stability tests (cardiovascular, disease, convergence)",
    "tier0: pure metadata / unit tests (no engine setup, <1s)",
    "tier1: engine contract tests (one VirtualCreature, <5s)",
    "tier2: scenario integration tests (multi-organ coupling, <30s)",
    "tier3: solver parity / validation / endurance (>30s)",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.coverage.run]
source = ["src", "game"]
branch = true
omit = [
    "tests/*",
    "tools/*",
    "*/__pycache__/*",
    "vet-game-frontend/*",
    "experiments/*",
    "paper_rewriting_output/*",
    "src/db/*",
    "src/textual_monitor.py",
    "src/ascii_dashboard.py",
    "main.py",
    "gui_app.py",
    "cli_daemon.py",
    "cli_shim.py",
    "vet_monitor.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
fail_under = 0
