[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioflow-lab-platform"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21",
  "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
